fix dark mode : background table of contents

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1374,11 +1374,11 @@ strong {
     text-decoration: underline;
     text-underline-offset: 0.3rem;
     text-decoration-thickness: 0.15rem;
-    text-decoration-color: #9801ff;
+    text-decoration-color: transparent;
     transition: text-decoration-color 250ms ease-out;
     font-size: 1.9rem; }
     .ice-header-nav a:hover, .ice-header-nav a:focus {
-      text-decoration-color: transparent; }
+      text-decoration-color: #9801ff; }
     @media (prefers-color-scheme: dark) {
       .ice-header-nav a {
         color: #ffffff;
@@ -2067,9 +2067,17 @@ kbd {
   margin-bottom: 4rem; }
   @media screen and (max-width: calc(768px - 1px)) {
     .ice-sidebar-left {
+      margin-left: -1.5rem;
+      margin-right: -1.5rem;
       padding: 1.5rem 1.5rem;
       background: #f6f8fa;
       border-radius: 0.3rem; } }
+  @media screen and (max-width: calc(768px - 1px)) and (prefers-color-scheme: dark) {
+    .ice-sidebar-left {
+      background: #273646;
+      box-shadow: rgba(0, 0, 0, 0.3) 0 0.2rem 0.7rem 0;
+      color: #ffffff; } }
+
   .ice-sidebar-left ol {
     margin: 0;
     padding-left: 1.5rem;
