--- a/src/assets/styles/scss/04-layout/_sidebar.scss
+++ b/src/assets/styles/scss/04-layout/_sidebar.scss
@@ -10,9 +10,17 @@
   margin-bottom: 4rem;
 
   @include for-mobile {
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
     padding: 1.5rem 1.5rem;
     background: #f6f8fa;
     border-radius: 0.3rem;
+
+    @media (prefers-color-scheme: dark) {
+      background: #273646;
+      box-shadow: rgba(0, 0, 0, 0.3) 0 0.2rem 0.7rem 0;
+      color: $white-color;
+    }
   }
 
   ol {
